--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "level1-v1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "watch": "nodemon --ext *"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-livereload": "^0.6.1",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "livereload": "^0.9.3",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3"
   }
