--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "connect-livereload": "^0.6.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1",
     "livereload": "^0.9.3",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
